--- a/css/screen.css
+++ b/css/screen.css
@@ -76,6 +76,7 @@ caption {background:#eee;}
 .last {margin-right:0;padding-right:0;}
 .top {margin-top:0;padding-top:0;}
 .bottom {margin-bottom:0;padding-bottom:0;}
+.table_edit {width:100%; background-color: #F5F5F5; border: 1px solid black; border-collapse: separate; margin-bottom:0.2em;}
 
 /* grid.css */
 .container {width:1200px;margin:0 auto;}
