new menu fixed dogovor_archiv/views/layouts/dogovor_archiv_main.php

--- a/css/main.css
+++ b/css/main.css
@@ -80,6 +80,10 @@ body
 	text-decoration:none;
 }
 
+.clear{
+    clear:both;
+}
+
 div.flash-error, div.flash-notice, div.flash-success
 {
 	padding:.8em;
