--- a/css/dogovor_archiv_style.css
+++ b/css/dogovor_archiv_style.css
@@ -120,22 +120,23 @@ h1, h2, h3, h4, h5, h6 {
 }
 .logo-container
 {
-	width:400px;
+/*	width:400px;*/
 	margin-top:20px;
 	margin-left:10px;
-	float:left;
+/*	float:left;*/
 }
 .site-logo
 {
 width:100px;
 float:left;
+margin-right: 10px;
 }
 
 .site-slogan {
     line-height: 40px;
-    margin-bottom: 3px;
+/*    margin-bottom: 3px;
     margin-right: 8px;
-	padding-top:20px;
+	padding-top:20px;*/
     text-shadow: 1px 1px #FFFFFF;
     text-transform: uppercase;
 	font-size:24px;
@@ -178,6 +179,11 @@ margin-left:10px;
 .menu-top-nav-container{
 	float:right;
         padding-top:20px;
+}
+
+.menu
+{
+    float:left;
 }
 
 #top-menu li{
